Version 1.0
- Bug fix: Upload task wouldn't be hidden even if they weren't done copying files
- Bug fix: Dark Wizard would also consider dead players valid locations
- Bug fix: Change URL to URI for version checking (URL deprecated)
- Bug fix: Tasks particles were being shown to Mobs
- Update maven to newer versions of compiler and shade plugins, set java version to 1.17 (Minecraft 1.19 uses this)
- World names are now handled in saving and loading, so Village now supports multiple worlds
- lobby and go-lobby commands: New location for pre and post game.
- go-meeting and go-spawn commands, teleport all players to that location
- hideEntity deprecation error suppressions
- Clean up task showing and hiding
- Remove showEffectCloud method, use new showTaskToPlayer method
- Version 1.0